Enhance Janex format documentation with key features and improvements